# Real-Time-Disaster-Prediction-using-Satellite-Data-and-Time-Series-Deep-Learning

./: .env.example  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
