# pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "disaster-predict"
version     = "1.0.0"
description = "Real-Time Disaster Prediction using Satellite Data and Deep Learning"
readme      = "README.md"
license     = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = [
    "disaster-prediction", "satellite-imagery", "deep-learning",
    "flood-prediction", "wildfire", "cyclone", "computer-vision",
    "temporal-fusion-transformer", "convlstm", "geospatial-ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.urls]
Homepage    = "https://github.com/yourusername/Real-Time-Disaster-Prediction-using-Satellite-Data-and-Time-Series-Deep-Learning"
Paper       = "https://arxiv.org/abs/2024.XXXXX"
"Bug Tracker" = "https://github.com/yourusername/disaster-predict/issues"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","N","W","UP","B"]
ignore = ["E501"]
exclude = ["notebooks/", "*.ipynb"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --timeout=60"
markers = ["slow: marks tests as slow", "gpu: requires GPU", "integration: integration tests"]

[tool.coverage.run]
source = ["ml", "backend", "agents"]
omit   = ["*/tests/*", "*/__init__.py"]
